changed png and jpg to webp

--- a/styles/stylesmobile.css
+++ b/styles/stylesmobile.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  background-image: url(../img/hatterkep.png);
+  background-image: url(../img/hatterkep.webp);
   background-size: cover;
   margin: 0;
   padding: 0;
