--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-  background-image: url(../img/hatterkep.png);
+  background-image: url(../img/hatterkep.webp);
   background-size: cover;
   margin: 0;
   padding: 0;
